# ktutils

./: CMakeLists.txt  README.md  ktutilsConfig.cmake
include/ktu/: algorithm.hpp  array.hpp  bit.hpp  ios.hpp  iterator.hpp  list.hpp  math.hpp  memory.hpp  multi_string.hpp  random.hpp  string.hpp  template.hpp  unicode.hpp  unicode.tcc  variadic.hpp  vector.hpp
include/ktu/macros/: inline.hpp
include/ktu/memory/: buffer.hpp  file.hpp  reader.hpp  view.hpp  writef.hpp
src/: algorithm.cpp  ios.cpp  memory.cpp  unicode.cpp
src/memory/: buffer.cpp  file.cpp  reader.cpp  view.cpp  writef.cpp
test/: CMakeLists.txt  main.cpp
